--- a/7j/frontend/public/manifest.json
+++ b/7j/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "seven june",
-  "name": "Create seven june Sample",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
