--- a/7j/backend/src/.env
+++ b/7j/backend/src/.env
@@ -1,2 +1,4 @@
+# HERE WHERE YOU GET YOUR LANGCHAIN API KEY [https://smith.langchain.com/]
+# HERE WHERE YOU GET YOUR GOOGLE API KEY  [https://aistudio.google.com/app/apikey]
 LANGCHAIN_API_KEY=your-langchain-api-key
 GOOGLE_API_KEY=your-google-api-key
